[gd_scene load_steps=6 format=3 uid="uid://ulc4hmxxtal7"]

[ext_resource type="Texture2D" uid="uid://b5qqfl161s3w8" path="res://patronhierba.png" id="1_8hjnm"]
[ext_resource type="Script" uid="uid://6pvwvtouw1lb" path="res://nivel_2_logica.gd" id="1_c0i4j"]
[ext_resource type="StyleBox" uid="uid://b7dw04famh27u" path="res://MenuPrincipal.tres" id="3_uej04"]
[ext_resource type="StyleBox" uid="uid://ddfl0kpk4xjqf" path="res://Volver.tres" id="5_uej04"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5n2v8"]
bg_color = Color(0.6800455, 0, 0.004753778, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.45846653, 0.03923065, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Nivel2Logica" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c0i4j")

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8hjnm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 104.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="LabelTitulo" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.90000004, 0, 1)
theme_override_font_sizes/font_size = 40
text = "¡Descubre la afición secreta de Capi resolviendo estos enigmas!"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 150

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridCuestionario" type="GridContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="PanelSolucion" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = ExtResource("3_uej04")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelSolucion"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelSolucion/HBoxContainer"]
layout_mode = 2

[node name="InputPalabraFinal" type="LineEdit" parent="VBoxContainer/PanelSolucion/HBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "¿CUÁL ES MI AFICIÓN?"
alignment = 1

[node name="BotonComprobar" type="Button" parent="VBoxContainer/PanelSolucion/HBoxContainer"]
layout_mode = 2
text = "Comprobar"

[node name="BotonVolver" type="Button" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 139.0
offset_bottom = 90.0
pivot_offset = Vector2(30, 30)
theme_override_styles/normal = ExtResource("5_uej04")
theme_override_styles/normal_mirrored = ExtResource("5_uej04")
theme_override_styles/hover = SubResource("StyleBoxFlat_5n2v8")
text = "VOLVER"
